# paraquolocator

./: .gitignore  README.md  command-builder.html  ignore_patterns.txt  paraquolocator.html  paraquolocator.py  pyproject.toml  viewer.html
paraquolocator/: __init__.py  cli.py  core.py
