[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paraquolocator"
version = "0.1.0"
description = "Detect parallel passages and quotations between texts using fuzzy string matching"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.0",
]

[project.scripts]
paraquolocator = "paraquolocator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paraquolocator*"]
